plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':core')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }

    modularity.inferModulePath = true
}

compileJava {
    options.compilerArgs << "--enable-preview"
}
